# qt_project

PacketTestProject/: CMakeLists.txt  main.cpp
PacketTestProject/packets/: Packet.h
PacketTestProject/packets/answer/: A01Auth.h  A02AuthResponse.h  A03TextMessage.h  A04DataTransfer.h  A05ConnectionCheck.h  A06ErrorReport.h
PacketTestProject/packets/command/: C01Auth.h  C02AuthResponse.h  C03TextMessage.h  C04DataTransfer.h  C05ConnectionCheck.h  C06ErrorReport.h
PacketTestProject/packets/result/: R01Auth.h  R02AuthResponse.h  R03TextMessage.h  R04DataTransfer.h  R05ConnectionCheck.h  R06ErrorReport.h
untitled/: main.cpp
